# agent-scroll-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: quickstart.py
fixtures/: c1-hex.json  c1-turns.json
src/agent_scroll/: __init__.py  canonical.py  schema.py  seal.py  serialize.py  verify.py
tests/: test_conformance.py
vectors/: 001-user-text-only.json  002-assistant-custom-params.json  003-assistant-with-seed.json  004-assistant-with-max-tokens.json  005-user-array-content.json  006-system-text-only.json  007-tool-response-text.json  008-assistant-tool-call-inline.json  009-assistant-tool-call-redacted.json  010-tool-result-inline.json  011-tool-result-redacted-error.json  012-three-turn-chain.json  013-signed-single-turn.json  014-signed-two-turn-chain.json  015-signed-redacted-tool-call.json  016-unicode-content.json  017-long-content.json  018-multiple-tool-calls.json  019-multiple-tool-results-mixed.json  020-kitchen-sink.json
